--- a/pages/register.html
+++ b/pages/register.html
@@ -62,7 +62,7 @@ Mon - Fri 08:00am - 05:00pm</p>
             <div class="checks">
                <label for="disOne" class="checkbox">
                <input id="disOne" name="disclaimerOne" type="checkbox" />
-                  I hereby authorise Angel & Walt to register my/our company and to offer related services on behalf of my/our company. I indemnify Zimbabwe Company Registrations from any responsibility, mistakes or errors arising from incorrect information submitted on this form or from mistakes made by the Registrar’s office.
+                  I hereby authorise Taxfluence to register my/our company and to offer related services on behalf of my/our company. I indemnify Zimbabwe Company Registrations from any responsibility, mistakes or errors arising from incorrect information submitted on this form or from mistakes made by the Registrar’s office.
                </label>
                <label for="disTwo" class="checkbox">
                <input id="disTwo" name="disclaimerTwo" type="checkbox" />
