--- a/pages/register.html
+++ b/pages/register.html
@@ -150,8 +150,28 @@ Mon - Fri 08:00am - 05:00pm</p>
       </form>
    </div>
 </article>
-<footer><p>Copyright Company Registrations &copy 2019 Designed by DOUCETECH. All rights reserved
-</p></footer>   <script src="../js/jquery-3.4.0.min.js" type="text/javascript" charset="utf-8"></script>
+<footer>
+  <div class="footer-nav">
+    <a href="../index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="requirements.html">Requirements</a>
+  </div>
+  <div class="social-media">
+    
+  </div>
+  <div class="contact">
+    <h4>Call or Whatsapp</h4>
+    <div class="contact-1">
+    <p>Mr Nhamo:</p><p><a href="tel:+263773437276">0773 437 276</a><br><a href="tel:+263719437276">0719 437 276</a></p></div>
+    <div class="contact-2"><p> Mrs Chikwerete:</p><p><a href="tel:+263779966127">0779 966 127</a><br><a href="tel:+2634791740">04 791 740</a></p></div>
+    
+  </div>
+  <div class="copyright">
+    <p>Copyright Company Registrations &copy 2019 Designed by<a href="http://www.doucetech.co.zw"> DOUCETECH.</a></p>
+  </div>
+</footer> 
+<script src="../js/jquery-3.4.0.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/script.js" type="text/javascript"></script>
 <!-- Marshall Chikari -->
 </body>
