--- a/index.html
+++ b/index.html
@@ -10,20 +10,6 @@
 </head>
 <body>
 
-<div class="top-container">
-  <p>  <i class="fas fa-map-marker-alt" style='font-size:20px'></i>
-4th street, ground floor..</p>
-  <p>  <i class="fas fa-business-time" style='font-size:20px'></i>
-Mon - Fri 08:00am - 05:00pm</p>
-  <p>  <a href="tel:+263773437276"><i class="fas fa-phone" style='font-size:20px'></i>
-+263773437276</a></p>
-  <div class="icons">
-  <i class="fab fa-facebook-f" style='font-size:20px'></i>
-  <i class="fab fa-google" style='font-size:20px'></i>
-  <i class="fab fa-linkedin" style='font-size:24px'></i>
-</div>
-</div>
-
 <div class="header" id="myHeader">
   <h2><a href="index.html">CompanyLogo</a></h2>
   <nav id="nav-list">
@@ -31,7 +17,7 @@ Mon - Fri 08:00am - 05:00pm</p>
   	<a href="pages/about.html">AboutUS</a>
   	<a href="pages/services.html">Services</a>
   	<a href="pages/requirements.html">Requirements</a>
-  	<a href="pages/register.html" style="color: red">Register Online</a>
+  	<a href="pages/register.html" class="register">Register Online</a>
   </nav>
   <a href="javascript:void(0);" class="icon" onclick="menu()">
 		<div class="burger" id="menu-button">
@@ -42,63 +28,86 @@ Mon - Fri 08:00am - 05:00pm</p>
   </a>
 </div>
 <div class="content">
-	
+		<div class="col">
+			<p>Register a company with us this month and get a free tax clearance</p>
+		</div>
+		<div class="col-2">
+		<form action="/action_page.php">
+    <input type="text" id="fname" name="firstname" placeholder="First name..">
+
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <input type="text" id="email" name="email" placeholder="Your email..">
+
+
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+  </div>	
 </div>
 <article>
 	<div class="company-type">
-		<div class="headline"><h5>WHICH TYPE OF COMPANY SHOULD I CHOOSE</h5></div>
+		<div class="headline"><h5>Want to register a company in Zimbabwe but wondering which company type to choose?<br> Below are the differences between PBC and PLC company you need to know before starting your booming business</h5></div>
 		<div class="para1">
 			<h6>Private Limited Company(PLC)</h6>
 			<ul>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
+				<li>PLC is suitable for large businesses like multinational companies wishing to expand into Zimbabwe’s market. This does not limit you to register your business as a PLC even when your business is small or still starting.</li>
+				<li>PLC company which requires at least 2 to 50 shareholders.Of these people, one of them must become a company secretary which is a must.</li>
+				<li>In terms of operational costs, a PLC becomes more expensive to maintain in the long run than a PBC especially when we are not talking of whether you are making a profit or loss. At the end of each accounting period each limited company is obliged to pay annual returns to the Registrar of Companies. Its not a huge amount but often becomes a blow to startups which are yet to make a profit. So the concept of saving is going to stick around.</li>
+				<li>PLC you will get the CR6, CR14, Memorandum and Articles of Association as the documentation outcome.</li>
 			</ul>
 		</div>
 		<div class="para2">
 			<h6>Private Business Corporation(PBC)</h6>
 			<ul>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
-				<li>Does that and so and so</li>
+				<li>PBC company is ideal for Small Medium Enterprises(SMEs). According to Zimra, SMEs falls into a range, classified by having employees below 75 and an annual turnover not exceeding $1 000 000.</li>
+				<li>A PBC restricts ownership from 1 to 20 shareholders. You can operate your sole trader business without any fear of loosing control.</li>
+				<li>Different types certificates are awarded when you register as a PBC or PLC company. With PBC you get a Statement & Certificate of Incorporation which summarizes all your company information on one paper. This document include all your company information and details of shareholders which comes under PLC as the CR6 and CR14 documents in PLC companies.</li>
 			</ul>
 		</div>
 	</div>
-	<div class="contact">
-		<div class="left">
-			<img src="images/men.jpg">
-			<p>Register a company with us this month and get a free tax clearance<br>Call or app Mr Nhamo : 0773 437 276 0719437276/ 04 791 740<br>Mrs Chikwerete: 0779 966 127 / 04 791 740</p>
+	<div class="section">
+		<div class="rectangle-1" id="rec">
+			<div class="round"></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+			</p>
 		</div>
-		<div class="right">
-		<form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email..">
-
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-  </div>	
+		<div class="rectangle-2" id="rec">
+			<div class="round"></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+		</div>
+		<div class="rectangle-3" id="rec">
+			<div class="round"></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+		</div>
 	</div>
+	
 </article>
-<footer><p>Copyright Company Registrations &copy 2019 Designed by DOUCETECH. All rights reserved
-</p></footer>
+<footer>
+	<div class="footer-nav">
+		<a href="index.html">Home</a>
+		<a href="pages/about.html">About</a>
+		<a href="pages/services.html">Services</a>
+		<a href="pages/requirements.html">Requirements</a>
+	</div>
+	<div class="social-media">
+		
+	</div>
+	<div class="contact">
+		<h4>Call or Whatsapp</h4>
+		<div class="contact-1">
+		<p>Mr Nhamo:</p><p><a href="tel:+263773437276">0773 437 276</a><br><a href="tel:+263719437276">0719 437 276</a></p></div>
+		<div class="contact-2"><p> Mrs Chikwerete:</p><p><a href="tel:+263779966127">0779 966 127</a><br><a href="tel:+2634791740">04 791 740</a></p></div>
+		
+	</div>
+	<div class="copyright">
+		<p>Copyright Company Registrations &copy 2019 Designed by<a href="http://www.doucetech.co.zw"> DOUCETECH.</a></p>
+	</div>
+</footer>
 	<script src="js/jquery-3.4.0.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/script.js" type="text/javascript"></script>
 <!-- Marshall Chikari -->
