--- a/pages/register.html
+++ b/pages/register.html
@@ -9,6 +9,7 @@
 
     <title>Taxfluence</title>
 
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -183,7 +184,7 @@
           </div>
         </div>
     </section>
-
+<footer><p>&copy TAXFLUENCE 2019</p></footer>
     <!-- Bootstrap core JavaScript -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
