--- a/pages/register.html
+++ b/pages/register.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Taxfluence</title>
+    <title>Taxfluency</title>
 
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <!-- Bootstrap core CSS -->
@@ -94,7 +94,7 @@
             <div class="checks">
                <label for="disOne" class="checkbox">
                <input id="disOne" name="disclaimerOne" type="checkbox" />
-                  I hereby authorise Taxfluence to register my/our company and to offer related services on behalf of my/our company. I indemnify Zimbabwe Company Registrations from any responsibility, mistakes or errors arising from incorrect information submitted on this form or from mistakes made by the Registrar’s office.
+                  I hereby authorise Taxfluency to register my/our company and to offer related services on behalf of my/our company. I indemnify Zimbabwe Company Registrations from any responsibility, mistakes or errors arising from incorrect information submitted on this form or from mistakes made by the Registrar’s office.
                </label>
                <label for="disTwo" class="checkbox">
                <input id="disTwo" name="disclaimerTwo" type="checkbox" />
@@ -184,7 +184,7 @@
           </div>
         </div>
     </section>
-<footer><p>&copy TAXFLUENCE 2019</p></footer>
+<footer><p>&copy TAXFLUENCY 2019</p></footer>
     <!-- Bootstrap core JavaScript -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
