--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
        <div class="req">
           <p class="text-center">
           <ul>
-            <li>1 to 5 proposed names for your company, the one you want the most on top and the least on the bottom</li>
-            <li>The main objectives of the company which will be listed in the Memorandum of Association for the Pvt Ltd and Incorporation Statement for a PBC.</li>
-            <li>The full names, ID numbers and addresses of the shareholders/members/directors</li>
+            <li>5 proposed names for your company, the one you want the most on top and the least on the bottom</li>
+            <li>Main objectives of the company which will be listed in the Memorandum of Association for the Pvt Ltd and Incorporation Statement for a PBC.</li>
+            <li>Full names, ID numbers and addresses of the shareholders/members/directors</li>
             <li>Pvt Ltd requires at least two directors and one shareholder, note that one can be a shareholder, director and company secretary on the same company</li>
             <li>In a Pvt Ltd note that a registered company, organization, trust or person can be a shareholder but in a PBC only a person can be a member/owner</li>
             <li>For the PBC we require the percentage of the interest and it must amount to 100%</li>
