--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <li>Physical and postal address of the business. In a PBC this goes on the Incorporation Statement and in a Private Limited Company it goes on the CR6.</li>
             <li>Each member of the PBC must sign the Incorporation Statement before the Registrar appends his/her seal, stamp and signature. In a Pvt Ltd the shareholders must sign and state the number of shares they are taking in the Memorandum of Association.</li>
           </ul>
+          <a href="pages/register.html">START REGISTRATION</a>
         </p>
             
         </div>
